Edit Miss Comment && Add Format

--- a/src/main/resources/assets/wurst/lang/ko_kr.json
+++ b/src/main/resources/assets/wurst/lang/ko_kr.json
@@ -22,7 +22,7 @@
   "description.wurst.hack.autolibrarian": "특정 인챈트된 책을 판매하는 마을 주민을 자동으로 훈련합니다. 이 핵을 사용하면 전체 거래 구간을 짧은 시간 내에 설정할 수 있습니다.",
   "description.wurst.hack.autoeat": "음식을 필요할때 자동으로 섭취합니다.",
   "description.wurst.setting.autoeat.target_hunger": "배고픔 게이지를 이 수준 이상으로 유지하려고 하지만 배고픔 점수를 낭비하지 않습니다.",
-  "description.wurst.setting.autoeat.min_hunger": "공복점을 낭비하더라도 항상 이 수준 이상의 공복점을 유지합니다.\n6.5 - 바닐라 식품에 낭비를 초래할 수 없음.\n10.0 - 낭비를 완전히 무시하고 헝거바만 가득 채웁니다.",
+  "description.wurst.setting.autoeat.min_hunger":" 항상 이차원적인 이상으로 배고픔 계산을 유지하기 때문에, 음식 계산기를 낭비해서 성공하지 않습니다 . \n 6.5 - 연합된 음식 아이템을 활용하는 것을 방해 하지 않습니다 . \n 10.0 - 낭비를 무시하고 배고픔 계산서를 항상 가득 채우고 있습니다. ",
   "description.wurst.setting.autoeat.injured_hunger": "부상당했을 때 이 수준 이상으로 배고픔 게이지를 채우며 음식 점수를 낭비하더라도 상관하지 않습니다.\n10.0 - 가장 빠른 회복\n9.0 - 가장 느린 회복\n<9.0 - 회복 없음\n<3.5 - 달리기 금지",
   "description.wurst.setting.autoeat.injury_threshold": "작은 부상으로 인해 모든 음식이 낭비되는 것을 방지합니다. AutoEat은 최소한 만큼의 체력을 잃었을 때만 부상 상태로 간주합니다.",
   "description.wurst.setting.autoeat.take_items_from": "AutoEat모듈이 음식을 찾아야 하는 위치.",
@@ -37,7 +37,7 @@
   "description.wurst.hack.autoreconnect": "서버에서 강제 퇴장당할 경우 자동으로 재접속합니다.",
   "description.wurst.hack.autorespawn": "죽을 경우 자동으로 리스폰합니다.",
   "description.wurst.hack.autosign": "원하는 글을 모든 표지판에 즉시 작성합니다. 활성화된 후 첫 번째 표지판에 일반적으로 글을 작성하여 모든 다른 표지판에 적용할 수 있습니다.",
-  "description.wurst.hack.autosoup": "체력이 낮을 때 자동으로 수프를 먹습니다.\n\n§l참고",
+  "description.wurst.hack.autosoup": " 줘서이 힘이 있을 때 자동으로 수프를 먹었습니다. \n\n §l참고 :§r 이 기능은 배고픔을 무시하고 수프를 직접적으로 줘서이 회복을 가정합니다. . 만약 이 기능이 서버에서 설정되어 있다면 AutoEat을 사용하세요. " ,
   "description.wurst.hack.autosprint": "자동으로 달립니다.",
   "description.wurst.hack.autosteal": "여는 모든 상자와 셜커 상자에서 모든 것을 자동으로 훔칩니다.",
   "description.wurst.hack.autoswim": "수영 애니메이션을 자동으로 실행합니다.",
@@ -70,13 +70,13 @@
   "description.wurst.hack.excavator": "선택한 영역 내의 모든 블록을 자동으로 부숩니다.",
   "description.wurst.hack.extraelytra": "Makes the Elytra easier to use.",
   "description.wurst.hack.fancychat": "채팅 메시지에서 ASCII 문자를 화려한 유니코드 문자로 바꿉니다. 일부 서버에서 욕설 필터를 우회하는 데 사용할 수 있습니다. \n유니코드 문자를 차단하는 서버에서는 작동하지 않습니다.",
-  "description.wurst.hack.fastbreak": "블록을 더 빨리 부술 수 있습니다. \n팁",
-  "description.wurst.hack.fastladder": "사다리를 더 빨리 올라갈 수 있습니다.",
-  "description.wurst.hack.fastplace": "블록을 5배 더 빨리 배치할 수 있습니다. \n팁",
-  "description.wurst.hack.feedaura": "주변의 동물에게 자동으로 사료를 줍니다.",
-  "description.wurst.hack.fightbot": "자동으로 주변을 돌아다니며 모든 것을 죽이는 봇입니다. \nMobArena에 적합합니다.",
-  "description.wurst.hack.fish": "수중 중력을 해제하여 물고기처럼 수영할 수 있습니다.",
-  "description.wurst.hack.flight": "비행이 가능합니다. \n\n§c§l경고",
+  "description.wurst.hack.fastbreak" : " 블록을 더 빨리 부술 수 있습니다. \n 팁 : Nuker와 함께 사용할 수 있습니다. " ,
+  "description.wurst.hack.fastladder" : " 투자를 더 빨리 하실 수 있습니다. " ,
+  "description.wurst.hack.fastplace" : " 블록을 5배 더 빠르게 배치할 수 있습니다. \n 팁 : AutoBuild와 같은 다른 것을 보여주기 위해 볼 수 있습니다. " ,
+  "description.wurst.hack.feedaura" : " 주변의 동물에게 자동으로 나타내기를 기준으로 합니다. " ,
+  "description.wurst.hack.fightbot" : " 자동으로 고향을 되찾고 모든 것을 얻는 것은 봇입니다. \n MobArena에 적합합니다. " ,
+  "description.wurst.hack.fish" : " 힘있는 힘을 움직여 물고기처럼 수영할 수 있습니다. " ,
+  "description.wurst.hack.flight" : " 비행할 수 있습니다. \n\n §c§l경고 :§r NoFall을 사용하지 않으면 섬하를 확장할 수 있습니다. " ,
   "description.wurst.hack.follow": "가장 가까운 개체를 따라가는 봇입니다. \n매우 귀찮습니다. \n\n.follow를 사용하여 특정 개체를 따라갈 수 있습니다.",
   "description.wurst.hack.forceop": "AuthMe 비밀번호를 크랙합니다. \nOP를 얻는 데 사용할 수 있습니다.",
   "description.wurst.hack.freecam": "영혼과 육체를 분리합니다.\n이때, 육체는 움직이지 않습니다.",
@@ -85,17 +85,17 @@
   "description.wurst.hack.handnoclip": "벽을 통해 특정 블록에 접근할 수 있습니다.",
   "description.wurst.hack.headroll": "항상 고개를 끄덕입니다. \n다른 플레이어에게만 표시됩니다.",
   "description.wurst.hack.healthtags": "플레이어의 체력을 이름표에 표시합니다.",
-  "description.wurst.hack.highjump": "더 높이 점프할 수 있게 해줍니다.\n\n§c§l주의",
-  "description.wurst.hack.infinichat": "채팅에서 256자 제한을 없애줍니다.\nNBT 데이터를 수정하는 긴 명령어에 유용합니다.\n\n§6§l주의",
+  "description.wurst.hack.highjump" : " 더 높이 점프할 수 있군요. \n\n §c§l주의 :§r NoFall을 사용하지 않으시면 낙하산을 즐길 수 있습니다. " ,
+  "description.wurst.hack.infinichat" : " 미팅에서 256자 제한을 종료합니다. \n NBT 데이터를 수정하는 긴 포럼에 유용합니다. \n\n §6§l주의 :§r 대화를 위해 권장합니다. 대부분의 서버는 256 자로 제한합니다 .",
   "description.wurst.hack.instantbunker": "자신 주위에 작은 벙커를 만듭니다. 57개의 블록이 필요합니다.",
   "description.wurst.hack.invwalk": "UI가 열린상태로 걸을 수 있습니다.",
   "description.wurst.setting.invwalk.allow_clickgui": "Wurst의 ClickGUI가 열려있는 동안에도 움직일 수 있게 해줍니다.",
-  "description.wurst.setting.invwalk.allow_other": "다른 게임 내 화면(상자,조합대 등등)",
+  "description.wurst.setting.invwalk.allow_other" : " 다른 게임 내 이동(상자, 말, 주민 거래 등)이 떠있는 동안에도 이동할 수 있습니다. 탄성 박스가 있는 경우에는 예외입니다. " ,
   "description.wurst.hack.itemesp": "떨어진 아이템을 강조합니다.",
   "description.wurst.hack.itemgenerator": "랜덤 아이템을 생성하여 땅에 드롭합니다.\n§o크리에이티브 모드 전용입니다.§r",
   "description.wurst.hack.jesus": "물 위를 걸을 수 있게 해줍니다.\n이 핵은 약 2000년 전에 예수님이 사용했습니다.",
-  "description.wurst.hack.jetpack": "마치 제트팩을 가지고 있는 것처럼 날 수 있게 해줍니다.\n\n§c§l주의",
-  "description.wurst.hack.kaboom": "주변 블록을 폭발처럼 부숩니다.\n서버에 NoCheat+가 없다면 Nuker보다 훨씬 빠를 수 있습니다. 빠른 도구와 약한 블록과 함께 사용하는 것이 가장 효과적입니다.\n참고,
+  "description.wurst.hack.jetpack" : " 마치 날 이벤트 팩을 가지고 있는 것처럼 있을 수 있습니다. \n\n §c§l주의 :§r NoFall을 사용하지 않는 경우 동하를 곁들일 수 있습니다. " ,
+  "description.wurst.hack.kaboom" : " 주변 블록을 폭발처럼 부숩니다. \n 에 NoCheat+가 특수 Nuker보다 훨씬 빠를 수 있습니다. 빠른 도구와 덩어리 블록과 함께 사용하는 것이 가장 비슷합니다. \n 참고 : 실제로 폭발하는 것은 아닙니다. " ,
   "description.wurst.hack.killauralegit": "감지가 어려운 느린 Killaura입니다.\n일반적인 NoCheat+ 서버에서는 필요하지 않습니다!",
   "description.wurst.hack.killaura": "자동으로 주변의 개체를 공격합니다.",
   "description.wurst.hack.killpotion": "거의 모든 것을 죽일 수 있는 물약을 만들어냅니다",
@@ -112,7 +112,7 @@
   "description.wurst.hack.newchunks": "자신 주변에 최근에 생성된 청크를 강조합니다.",
   "description.wurst.hack.nobackground": "UI 뒤 배경의 그림자, 검은 배경등 방해요소가 사라집니다.",
   "description.wurst.hack.noclip": "블록을 자유롭게 이동할 수 있습니다.\n블록(예: 모래)이 활성화되려면 머리 위에 떨어져야 합니다.\n\n§c §l 경고: §r 블록을 통과하는 동안 피해를 입게 됩니다!",
-  "description.wurst.hack.nocomcrash": "Nocom 악용을 사용하여 서버를 지연 및 충돌시킵니다.\n페이퍼 서버에서는 작동하지 않습니다. 바닐라, 스피곳, 패브릭에서 작동하는 것을 테스트했습니다. 일부 안티치트로 비활성화할 수 있습니다."
+  "description.wurst.hack.nocomcrash": "Nocom 악용을 사용하여 서버를 지연 및 충돌시킵니다.\n페이퍼 서버에서는 작동하지 않습니다. 바닐라, 스피곳, 패브릭에서 작동하는 것을 테스트했습니다. 일부 안티치트로 비활성화할 수 있습니다.",
   "description.wurst.hack.nofall": "낙하 피해를 방지합니다.",
   "description.wurst.hack.nofireoverlay": "불에 탔을 때 오버레이를 제거합니다.\n\n§c§l주의",
   "description.wurst.hack.nofog": "월드의 안개를 제거합니다.",
@@ -134,7 +134,7 @@
   "description.wurst.hack.portalesp": "주변 포탈을 강조합니다..",
   "description.wurst.hack.portalgui": "포탈에서 GUI를 열 수 있게 해줍니다.",
   "description.wurst.hack.potionsaver": "정지 상태에서는 모든 물약 효과를 유지합니다.",
-  "description.wurst.hack.prophuntesp": "블럭 숨바꼭질에서 가짜 블록을 볼 수 있게 해줍니다.",
+  "description.wurst.hack.prophuntesp" : " 블록 숨바꼭질에서 가짜 블록을 볼 수 있게 표시됩니다. \n Mineplex 서버의 블록 숨바꼭질을 위해 제작, 다른 서버에서 작동하지 않을 수 있습니다. " ,
   "description.wurst.hack.protect": "가장 가까운 개체를 따라가고 다른 개체로부터 보호하는 봇입니다.\n가장 가까운 개체 대신 특정 개체를 보호하려면 .protect 명령을 사용하세요.",
   "description.wurst.hack.radar": "주변 개체의 위치를 보여줍니다.\n§c빨강색§r - 플레이어\n§6주황색§r - 몬스터\n§a초록색§r - 동물\n§7회색§r - 기타",
   "description.wurst.hack.rainbowui": "§cM§aa§9k§ce§as §9e§cv§ae§9r§cy§at§9h§ci§an§9g §cc§ao§9l§co§ar§9f§cu§al§9.",
@@ -151,7 +151,7 @@
   "description.wurst.hack.speednuker": "NoCheat+를 우회할 수 없는 더 빠른 버전의 Nuker입니다.",
   "description.wurst.hack.spider": "거미처럼 벽을 타고 올라갈 수 있게 해줍니다.",
   "description.wurst.hack.step": "모든 블럭을 계단처럼 올라갑니다.",
-  "description.wurst.hack.throw": "아이템을 여러 번 사용합니다. 눈덩이와 알을 던지고 폭도를 산란하고 광산 카트를 배치하는 등 매우 많은 양으로 사용할 수 있습니다.\n\n이로 인해 많은 지연이 발생하고 서버가 다운될 수 있습니다."
+  "description.wurst.hack.throw": "아이템을 여러 번 사용합니다. 눈덩이와 알을 던지고 폭도를 산란하고 광산 카트를 배치하는 등 매우 많은 양으로 사용할 수 있습니다.\n\n이로 인해 많은 지연이 발생하고 서버가 다운될 수 있습니다.",
   "description.wurst.hack.tillaura": "흙, 풀 등이 자동으로 농지로 바뀝니다.\nKill Aura와 혼동하지 않기 위해",
   "description.wurst.hack.timer": "개인의 시간 선을 조절합니다.\n",
   "description.wurst.hack.tired": "2015년 4월의 알렉산더를 닮았습니다.\n다른 플레이어만 볼 수 있습니다.",
@@ -164,7 +164,7 @@
   "description.wurst.hack.truesight": "보이지 않는 개체를 볼 수 있게 해줍니다.",
   "description.wurst.hack.tunneller": "터널을 자동으로 만들어 줍니다.\n\n§c§l주의",
   "description.wurst.hack.x-ray": "벽을 통해 광물을 볼 수 있게 해줍니다.",
-  "description.wurst.other_feature.nochatreports": "1.19 버전부터 채팅 메시지에 첨부되는 암호화 서명을 비활성화합니다.\n\n§c§l주의",
+  "description.wurst.other_feature.nochatreports" : " 1.19 버전부터 채팅에 첨부되는 메일을 서명하십시오. \n\n §c§l주의 : §c채팅에 §c인증을 §c첨부하여 §c메시지 를 §c보내면 §c계정이 §c신고되어 §c멀티플레이어에서 §c글로벌 §c밴 §c처리될 §c수 §c있습니다!§r \n\n 미팅에서 무해한 내용을 커뮤니케이션하고 있으며, 서명된 메신저는 가짜 채팅 기록을 생성하여 계정이 불공정하게 처리되는 것을 고려할 수 있습니다. \n\n 서명을 다시 활성화하여 채팅을 하는 것이 아니라 가계정에서 플레이하는 것을 고려하세요 .",
   "button.wurst.nochatreports.disable_signatures": "서명 비활성화",
   "button.wurst.nochatreports.re-enable_signatures": "서명 활성화",
   "description.wurst.setting.generic.attack_speed": "초당 클릭 수 기준 공격 속도.\n0 = 공격 쿨다운에 맞게 속도를 동적으로 조정합니다.",
@@ -179,11 +179,11 @@
   "description.wurst.altmanager.window_freeze": "해당 창이 열려 있는 동안 게임이 응답하지 않는 것처럼 보일 수 있습니다.",
   "description.wurst.altmanager.fullscreen": "§c전체 화면 모드를 해제하세요!",
   "gui.wurst.altmanager.folder_error.title": "'.Wurst encryption' 폴더를 생성할 수 없습니다!",
-  "gui.wurst.altmanager.folder_error.message": "Wurst가 이 폴더에 액세스할 수 없게 블록한 것 같습니다.\nAltManager는 이 폴더 없이 가계정 목록을 암호화하거나 복호화할 수 없습니다.\nAltManager를 계속 사용할 수 있지만",
+  "gui.wurst.altmanager.folder_error.message" : " Wurst가 이 폴더에 액세스할 수 없습니다 블록한 것 같습니다. \n AltManager는 이 폴더 없이 가계정 목록을 포함하거나 복호화할 수 없습니다. \n AltManager를 계속 사용합니다 하지만 이제 생성하는 것은 저장되지 않습니다. \n\n 전체는 다음과 같습니다: \n %s " ,
   "gui.wurst.altmanager.empty.title": "가계정 목록이 비어 있습니다.",
   "gui.wurst.altmanager.empty.message": "시작하기 위해 일부 무작위 알트 계정을 원하시나요?",
-  "gui.wurst.nochatreports.unsafe_server.title": "§4§l주의 안전하지 않은 서버",
-  "gui.wurst.nochatreports.unsafe_server.message": "이 서버는 채팅 서명을 활성화해야 하므로 계정이 가짜 채팅 신고의 위험에 노출됩니다.\n\n채팅 서명을 차단하고 다시 연결한 경우 이 서버에서 채팅할 수 있습니다. 그렇다면 계정을 잃어도 상관없는 가계정으로 플레이하는 것을 고려하세요.\n\n이 서버가 소유한 경우 server.properties에서 'enforce-secure-profile'을 false로 설정하여 수정할 수 있습니다. 전형적인 Mojang의 스타일로",
+  "gui.wurst.nochatreports.unsafe_server.title" : " §4§l주의 :§r위험 서버 " ,
+  "gui.wurst.nochatreports.unsafe_server.message" : " 이 서버는 서명을 활성화해야 하기 때문에 로그가 사기적인 환영받는 위험에 추가됩니다. \n\n 서명자를 사랑하고 다시 연결하는 경우 이 서버에서 도입 할 수 있습니다. 그러면 계정을 포함하여 로그인하지 않고 플레이할 수 있습니다. \n\n 이 서버가 소유한 server.properties에서 'enforce-secure-profile'을 false로 설정할 수 있습니다. 의 스타일로 , 이 설정은 이름을 의미하며 작동합니다 .",
   "toast.wurst.nochatreports.unsafe_server.title": "채팅 메시지가 신고될 수 있습니다",
   "toast.wurst.nochatreports.unsafe_server.message": "이 서버에서 전송한 메시지는 Mojang에게 신고될 수 있으며 계정이 모든 서버 밴 처리될 수 있습니다",
   "gui.wurst.nochatreports.ncr_mod_server.title": "\"채팅신고 비활성화 서버\" 서버",
