Make more setting descriptions translatable

--- a/src/main/resources/assets/wurst/lang/en_us.json
+++ b/src/main/resources/assets/wurst/lang/en_us.json
@@ -1,10 +1,24 @@
 {
   "description.wurst.hack.aimassist": "Helps you aim at nearby entities.",
+  "description.wurst.setting.aimassist.fov": "Field Of View - how far away from your crosshair an entity can be before it's ignored.\n360° = aims at entities all around you.",
+  "description.wurst.setting.aimassist.check_line_of_sight": "Won't aim at entities behind blocks.",
+  "description.wurst.setting.aimassist.aim_while_blocking": "Keeps aiming at entities while you're blocking with a shield or using items.",
   "description.wurst.hack.airplace": "Allows you to place blocks in mid-air.",
   "description.wurst.setting.airplace.guide": "Shows a guide for where blocks will be placed.",
   "description.wurst.setting.airplace.guide_color": "Color of the block placing guide, if enabled.",
   "description.wurst.hack.anchoraura": "Automatically places (optional), charges, and detonates respawn anchors to kill entities around you.",
+  "description.wurst.setting.anchoraura.range": "Determines how far AnchorAura will reach to place, charge and detonate anchors.",
+  "description.wurst.setting.anchoraura.auto-place_anchors": "When enabled, AnchorAura will automatically place anchors near valid entities.\nWhen disabled, AnchorAura will only charge and detonate manually placed anchors.",
+  "description.wurst.setting.anchoraura.face_anchors": "Whether or not AnchorAura should face the correct direction when placing and right-clicking respawn anchors.\n\nSlower but can help with anti-cheat plugins.",
+  "description.wurst.setting.anchoraura.check_line_of_sight": "Ensures that you don't reach through blocks when placing or right-clicking respawn anchors.\n\nSlower but can help with anti-cheat plugins.",
+  "description.wurst.setting.anchoraura.take_items_from": "Where to look for respawn anchors and glowstone.",
   "description.wurst.hack.antiafk": "Walks around randomly to hide you from AFK detectors.",
+  "description.wurst.setting.antiafk.use_ai": "Uses a pathfinding AI to move around naturally and avoid hazards.\nCan sometimes get stuck.",
+  "description.wurst.setting.antiafk.ai_range": "The area in which AntiAFK can move when Use AI is turned on.",
+  "description.wurst.setting.antiafk.non-ai_range": "The area in which AntiAFK can move when Use AI is turned off.\n\n§c§lWARNING:§r This area must be completely unobstructed and free of hazards.",
+  "description.wurst.setting.antiafk.wait_time": "Time between movements in seconds.",
+  "description.wurst.setting.antiafk.wait_time_randomization": "How much time can be randomly added or subtracted from the wait time, in seconds.",
+  "description.wurst.setting.antiafk.show_wait_time": "Displays the remaining wait time in the HackList.",
   "description.wurst.hack.antiblind": "Prevents blindness and darkness effects.\nIncompatible with OptiFine.",
   "description.wurst.hack.anticactus": "Protects you from cactus damage.",
   "description.wurst.hack.antientitypush": "Prevents you from getting pushed by players and mobs.",
