--- a/src/main/resources/assets/wurst/lang/en_us.json
+++ b/src/main/resources/assets/wurst/lang/en_us.json
@@ -133,6 +133,7 @@
   "description.wurst.hack.killpotion": "Generates a potion that can kill almost anything, including players in Creative mode. Does not work on undead mobs, since they are already dead.\n\nRequires Creative mode.",
   "description.wurst.hack.liquids": "Allows you to place blocks in liquids.",
   "description.wurst.hack.lsd": "Causes hallucinations.",
+  "description.wurst.hack.macedmg": "Increases your damage when attacking with a mace.",
   "description.wurst.hack.masstpa": "Sends a TPA request to all players.",
   "description.wurst.hack.mileycyrus": "Makes you twerk.",
   "description.wurst.hack.mobesp": "Highlights nearby mobs.",
