Partially mitigate AntiHunger's fall damage issue
- NoFall and AntiHunger will now disable each other, so there can be no
confusion about which hack is causing the extra fall damage.
- Added a warning to AntiHunger's description.
- AntiHunger will no longer stay enabled after a restart.

Without knowing the specific cause of AntiHunger's fall damage bug, this
is all I can do about it for now. Taking the blame away from NoFall
should at least result in slightly more useful bug reports. A proper fix
is not possible until someone who has the issue figures out the exact
steps to trigger the bug.

--- a/src/main/resources/assets/wurst/translations/cs_cz.json
+++ b/src/main/resources/assets/wurst/translations/cs_cz.json
@@ -4,7 +4,7 @@
   "description.wurst.hack.antiafk": "Prochází se náhodně, aby vás skryl před AFK detektory.",
   "description.wurst.hack.antiblind": "Zabraňuje blindness a efekty tmy.\nNekompatibilní s OptiFinem.",
   "description.wurst.hack.anticactus": "Chrání vás před poškozením kaktusem.",
-  "description.wurst.hack.antihunger": "Zpomalí váš hlad, když chodíte.",
+  "description.wurst.hack.antihunger": "Zpomalí váš hlad, když chodíte.\n\n§c§lUPOZORNĚNÍ:§r Byly hlášeny případy, kdy tento hack způsobil zvýšené poškození pádem za specifických, neznámých podmínek.",
   "description.wurst.hack.antiknockback": "Zabraní strkání hráči a moby.",
   "description.wurst.hack.antispam": "Blokuje spam chatu přidáním čítače k opakovaným zprávám.",
   "description.wurst.hack.antiwaterpush": "Zabraňuje posouvání vodou.",
