--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -23,7 +23,7 @@
   "description.wurst.hack.antiblind": "Prevents blindness and darkness effects.\nIncompatible with OptiFine.",
   "description.wurst.hack.anticactus": "Protects you from cactus damage.",
   "description.wurst.hack.antientitypush": "Prevents you from getting pushed by players and mobs.",
-  "description.wurst.hack.antihunger": "Slows down your hunger when you are walking.",
+  "description.wurst.hack.antihunger": "Slows down your hunger when you are walking.\n\n§c§lWARNING:§r There have been reports of this hack causing you to take extra fall damage under specific, unknown conditions.",
   "description.wurst.hack.antiknockback": "Prevents you from taking knockback from players and mobs.",
   "description.wurst.hack.antispam": "Blocks chat spam by adding a counter to repeated messages.",
   "description.wurst.hack.antiwaterpush": "Prevents you from getting pushed by water.",
