--- a/src/main/resources/assets/wurst/translations/zh_tw.json
+++ b/src/main/resources/assets/wurst/translations/zh_tw.json
@@ -16,6 +16,7 @@
   "description.wurst.hack.autodrop": "自動丟棄你不想要的物品（有預設）。",
   "description.wurst.hack.autoleave": "如果你的血量低於設定值，將會自動退出伺服器。",
   "description.wurst.hack.autoeat": "當必要的時候將會自動進食。",
+  "description.wurst.hack.bridgeclick": "當你的準心對準方塊側面時自動按右鍵。",
   "description.wurst.setting.autoeat.target_hunger": "嘗試將飢餓值保持在或高於此水平，但前提是它不會浪費任何飢餓值。",
   "description.wurst.setting.autoeat.min_hunger": "始終將飢餓條保持在此水平或以上，即使它會浪費一些飢餓點。\n6.5 - 不會對香草食品造成任何浪費。\n10.0 - 完全忽略浪費並保持飢餓條充滿。",
   "description.wurst.setting.autoeat.injured_hunger": "當你受傷時，將飢餓條填充到至少這個水平，即使它會浪費一些飢餓點。\n10.0 - 最快的治療\n9.0 - 最慢的治療\n<9.0 - 沒有治療\n<3.5 - 沒有衝刺",
