--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -147,6 +147,8 @@
   "description.wurst.hack.mileycyrus": "Makes you twerk.",
   "description.wurst.hack.mobesp": "Highlights nearby mobs.",
   "description.wurst.hack.mobspawnesp": "Highlights areas where mobs can spawn.",
+  "description.wurst.setting.mobspawnesp.night_color": "Color of the X at positions where mobs can spawn at night.",
+  "description.wurst.setting.mobspawnesp.day_color": "Color of the X at positions where mobs can always spawn.",
   "description.wurst.hack.multiaura": "Faster Killaura that attacks multiple entities at once.",
   "description.wurst.hack.nameprotect": "Hides all player names.",
   "description.wurst.hack.nametags": "Changes the scale of the nametags so you can always read them. Also allows you to see the nametags of sneaking players.",
