--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -231,6 +231,7 @@
   "description.wurst.hack.trollpotion": "Generates a potion with many annoying effects on it.",
   "description.wurst.hack.truesight": "Allows you to see invisible entities.",
   "description.wurst.hack.tunneller": "Automatically digs a tunnel.\n\n§c§lWARNING:§r Although this bot will try to avoid lava and other dangers, there is no guarantee that it won't die. Only send it out with gear that you don't mind losing.",
+  "description.wurst.hack.veinminer": "Automatically mines ore veins for you.",
   "description.wurst.hack.x-ray": "Allows you to see ores through walls.",
   "description.wurst.other_feature.nochatreports": "Disables the cryptographic signatures that since 1.19 are attached to your chat messages.\n\n§c§lWARNING: §cIf §cyou §csend §cchat §cmessages §cwith §csignatures, §cyour §cMinecraft §caccount §ccan §cget §creported §cand §cglobally §cbanned §cfrom §cmultiplayer!§r\n\nEven if you only say harmless things in chat, your signed messages can be abused to create a fake chat report that gets your account banned unfairly.\n\nIf you have to re-enable chat signatures to chat on a server, consider playing on an alt account that you don't mind losing.",
   "button.wurst.nochatreports.disable_signatures": "Disable Signatures",
