Apply faseri's suggestion

--- a/src/main/resources/assets/wurst/translations/ru_ru.json
+++ b/src/main/resources/assets/wurst/translations/ru_ru.json
@@ -148,7 +148,7 @@
   "description.wurst.hack.toomanyhax": "Отключает ненужные вам функции.\nПозволяет быть уверенным, что вы не включите случайно что-то не то и получите бан.\nДля тех, кто хочет почитерить \"совсем чуть-чуть\".\n\nИспользуйте команду §6.toomanyhax§r чтобы выбрать какие функции следует отключить.\nНапишите §6.help toomanyhax§r для более подробной информации.",
   "description.wurst.hack.tp-aura": "Автоматически атакует ближайшую сущность, при этом телепортируясь вокруг неё.",
   "description.wurst.hack.trajectories": "Показывает траекторию полета стрел и бросаемых вещей.",
-  "description.wurst.hack.treebot": "Экспериментальная функция. Бот, который ходит и автоматически рубит деревья.\nПока что ограничен обычными маленькими деревьями.",
+  "description.wurst.hack.treebot": "Экспериментальная функция. Бот, который ходит и автоматически вырубает деревья.\nПока что ограничен обычными маленькими деревьями.",
   "description.wurst.hack.triggerbot": "Автоматически атакует сущность на которую Вы смотрите.",
   "description.wurst.hack.trollpotion": "Создает зелье с множеством противных эффектов. Для работы требуется креатив.",
   "description.wurst.hack.truesight": "Позволяет видеть невидимых сущностей.",
