--- a/src/main/resources/assets/wurst/translations/en_us.json
+++ b/src/main/resources/assets/wurst/translations/en_us.json
@@ -176,6 +176,7 @@
   "description.wurst.hack.nopumpkin": "Blocks the overlay when wearing a pumpkin on your head.",
   "description.wurst.hack.noshieldoverlay": "Lowers the shield so it covers less of your screen.",
   "description.wurst.hack.noslowdown": "Cancels slowness effects caused by honey, soul sand and using items.",
+  "description.wurst.hack.novignette": "Remmoves the vignette effect when dark or past the world border.",
   "description.wurst.hack.noweather": "Allows you to alter the client-side weather, time and moon phase.",
   "description.wurst.hack.noweb": "Prevents you from getting slowed down by cobwebs.",
   "description.wurst.hack.nuker": "Automatically breaks blocks around you.",
